fix some wrong details

--- a/about.html
+++ b/about.html
@@ -289,8 +289,7 @@
             <div class="about-content">
               <h2 class="title is-3 has-text-centered" style="color: #2c3e50;">实验室简介</h2>
               <p>
-                欢迎来到湖南大学设计学院3DX实验室！我们是一个专注于前沿技术研究和创新的团队，
-                致力于在计算机视觉、3D重建、人工智能等领域推动学术研究和技术发展。
+                欢迎来到3DXLab！
               </p>
               <p>
                 实验室由 <a href="https://design.hnu.edu.cn/info/1023/8820.htm" target="_blank" class="has-text-primary">劳奕臻教授</a> 
@@ -394,7 +393,8 @@
         
         <div class="career-section">
           <div class="career-intro">
-            我们实验室长期招收博士后、研究助理、全职/兼职博士生、实习生、研究科学家等职位。
+            实验室长期招收博士后、研究助理等职位。欢迎对计算机视觉、3D重建、人工智能或交互设计领域的研究感兴趣的同学（本科生、硕士生、博士生）加入我们的研究团队！
+            专业背景包括但不限于：计算机科学、设计学、数学、自动化、电子工程等相关专业。<br>
             有意向的同学可以通过以下邮箱联系我们：
           </div>
 
@@ -407,13 +407,6 @@
                 </span>
               </li>
             </ul>
-          </div>
-
-          <div class="recruitment-note">
-            <p style="margin-top: 2rem; color: #666; font-size: 1.1rem; line-height: 1.6;">
-              欢迎对计算机视觉、3D重建、人工智能或交互设计领域的研究感兴趣的同学（本科生、硕士生、博士生）加入我们的研究团队！<br>
-              专业背景包括但不限于：计算机科学、设计学、数学、自动化、电子工程等相关专业。
-            </p>
           </div>
         </div>
       </div>
