--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3DXLab - 湖南大学设计学院3DX实验室</title>
-  <meta name="description" content="湖南大学设计学院3DX实验室官方网站">
+  <title>3DXLab - 湖南大学设计与艺术学院</title>
+  <meta name="description" content="湖南大学设计与艺术学院3DXLab官方网站">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
@@ -241,7 +241,7 @@
      <section id="home" class="hero">
        <div class="hero-content">
          <h1 class="hero-title">3DXLab</h1>
-         <p class="hero-subtitle">湖南大学设计学院3DX实验室</p>
+         <p class="hero-subtitle">湖南大学设计与艺术学院</p>
        </div>
      </section>
 
@@ -253,8 +253,7 @@
            <div class="column is-8 is-offset-2">
              <div class="about-content has-text-centered">
                <p class="is-size-4">
-                 湖南大学设计学院3DX实验室是一个专注于前沿技术研究和创新的团队，
-                 致力于在计算机视觉、3D重建、人工智能等领域推动学术研究和技术发展。
+                 3DXLab是一个专注于前沿技术研究和创新的团队，致力于在计算机视觉、3D重建、人工智能等领域推动学术研究和技术发展。
                </p>
                <div style="margin-top: 3rem;">
                  <a href="about.html" class="button is-primary is-large" style="margin: 0.5rem;">
