--- a/team.html
+++ b/team.html
@@ -441,7 +441,7 @@
     <!-- 实验室负责人 -->
     <section class="section content-section">
       <div class="container">
-        <h2 class="title is-2 section-title">实验室负责人</h2>
+        <h2 class="title is-2 section-title">教授</h2>
         <div class="supervisor-profile">
           <div class="columns is-vcentered">
             <div class="column is-3">
@@ -455,7 +455,7 @@
                 <p class="supervisor-position">教授 / 实验室负责人</p>
                 <div class="supervisor-bio">
                   <p>
-                    劳奕臻是湖南大学设计学院教授，3DX实验室负责人。他是湖湘青年英才、长沙市杰出创新青年、华为青年学者。
+                    劳奕臻是湖南大学设计与艺术学院教授，3DXLab负责人。他是湖湘青年英才、长沙市杰出创新青年、华为青年学者。
                     在计算机视觉、3D重建、人工智能等领域具有丰富的研究经验，发表了多篇高水平学术论文。
                   </p>
                   <p>
@@ -468,11 +468,11 @@
                     <i class="fas fa-home"></i>
                     <span>个人主页</span>
                   </a>
-                  <a href="mailto:yizhen.lao@hnu.edu.cn" class="contact-link">
+                  <a href="mailto:yizhenlao@hnu.edu.cn" class="contact-link">
                     <i class="fas fa-envelope"></i>
                     <span>邮箱联系</span>
                   </a>
-                  <a href="#" class="contact-link">
+                  <a href="https://scholar.google.com/citations?user=OhPsgH0AAAAJ" class="contact-link">
                     <i class="fab fa-google-scholar"></i>
                     <span>Google Scholar</span>
                   </a>
@@ -493,6 +493,7 @@
         <div class="student-group">
           <h3 class="student-group-title">博士研究生</h3>
           <div class="columns is-multiline">
+
             <div class="column is-2-5">
               <div class="student-card">
                 <div class="student-photo">
@@ -500,7 +501,6 @@
                 </div>
                 <div class="student-info">
                   <h4 class="student-name">王程博</h4>
-                  <p class="student-degree">博士研究生</p>
                 </div>
               </div>
             </div>
@@ -512,43 +512,23 @@
                 </div>
                 <div class="student-info">
                   <h4 class="student-name">张宇</h4>
-                  <p class="student-degree">博士研究生</p>
                 </div>
               </div>
             </div>
             
           </div>
         </div>
+
+        <div class="student-group">
+          <h3 class="student-group-title">硕士研究生</h3>
+          <div class="columns is-multiline">
+            
+          </div>
+        </div>
+
       </div>
     </section>
 
-    <!-- 招聘信息 -->
-    <section class="section content-section">
-      <div class="container">
-        <div class="recruitment-box">
-          <div class="recruitment-icon">
-            <i class="fas fa-user-plus"></i>
-          </div>
-          <h3 class="title is-3 recruitment-title">加入我们</h3>
-          <div class="recruitment-text">
-            <p>
-              我们诚挚欢迎对计算机视觉、人工智能、3D技术或交互设计领域感兴趣的同学加入我们的研究团队！
-            </p>
-            <p>
-              <strong>招聘对象：</strong>本科生、硕士研究生、博士研究生<br>
-              <strong>专业背景：</strong>计算机科学、设计学、数学、自动化等相关专业<br>
-              <strong>研究方向：</strong>计算机视觉、机器学习、3D重建、VR/AR、人机交互等
-            </p>
-          </div>
-          <a href="mailto:contact@3dxlab.com" class="button is-primary is-large">
-            <span class="icon">
-              <i class="fas fa-envelope"></i>
-            </span>
-            <span>联系我们</span>
-          </a>
-        </div>
-      </div>
-    </section>
   </div>
 </body>
 </html>
